Error message to render properly with newlines

--- a/style/index.css
+++ b/style/index.css
@@ -17,3 +17,8 @@
     min-height: 3em;
     font-size: 14px;
 }
+
+.jp-Dialog-body {
+    /* For newlines in error message to be visible */
+    white-space: pre-wrap;
+}
